--- a/bot/blogbot/blogtemplate.html
+++ b/bot/blogbot/blogtemplate.html
@@ -1,15 +1,15 @@
 <div align="center">
-    <a href="http://www.furiganahub.com"><img src="http://www.furiganahub.com/static/img/logoBlue.8db84c20.jpg" width="80" height="80"></a>
-  <br>
-  <a href="http://www.furiganahub.com">www.furiganahub.com</a>
+  <a href="http://www.furiganahub.com"><img src="http://www.furiganahub.com/static/img/logoBlue.8db84c20.jpg" width="80" height="80"></a>
+  <a href="http://www.furiganahub.com/music/detail/[[id]]">www.furiganahub.com에서 보기</a>
 </div>
+
 <p align="center">
     80년도에서 최신 J-pop 7000여곡의 노래를 후리가나를 읽으면서 일본어를 배울 수있습니다.<br>
     후리가나, 원곡가사, 번역 그리고 관련 유튜브 동영상을 보면서 노래와 일본어 읽기를 시작하세요.<br>
     더 많은 J-Pop을 후리가나와 원본 그리고 번역까지 함께 읽을 수 있습니다. 지금 확인해보세요.<br><br>
 </p>
 <div align="center"><img src="[[albumImageUrl]]" width="300" height="300"></div>
-<a href="http://www.furiganahub.com/music/detail/[[id]]"><div align="center"><h1> [[title]]</h1></div></a>
+<div align="center"><h1><a href="http://www.furiganahub.com/music/detail/[[id]]"></a>[[title]]</a></h1></div>
 <div align="center"><h2> [[artist]]</h2></div>
 <p>
   [[furigana]]
@@ -19,7 +19,7 @@
 <p>
   [[lyricsKor]]
 </p>
-<div align="center"><img src="[[albumImageUrl]]" width="300" height="300"></div>
+<div align="center"><a href="http://www.furiganahub.com/music/detail/[[id]]"></a><img src="[[albumImageUrl]]" width="300" height="300"/></a></div>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/[[youtubeId]]" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <br>
@@ -27,7 +27,8 @@
 <div align="center">
     <a href="http://www.furiganahub.com"><img src="http://www.furiganahub.com/static/img/logoBlue.8db84c20.jpg" width="80" height="80"></a>
   <br>
-  <a href="http://www.furiganahub.com">www.furiganahub.com</a>
+  <a href="http://www.furiganahub.com/music/detail/[[id]]">www.furiganahub.com에서 보기</a>
+  
 </div>
 <p align="center">
     <b>일본 뉴스</b><br>
@@ -36,4 +37,6 @@
     JLPT모든 레벨(1 ~ 5)의 한자를 배울 수 있습니다. 그림과 획수 음독 훈독을 보면서 배워봅시다.<br><br>
     <b>일본 트위터</b><br>
     좋아하는 일본 연예인 또는 친구의 트위터계정을 조회해보세요. 한자가 포함된 트윗을 후리가나로 보실 수 있습니다.<br><br>
+
+    <a href="http://www.furiganahub.com">www.furiganahub.com</a>
 </p>
