--- a/bot/blogbot/blogtemplate.html
+++ b/bot/blogbot/blogtemplate.html
@@ -8,7 +8,7 @@
     후리가나, 원곡가사, 번역 그리고 관련 유튜브 동영상을 보면서 노래와 일본어 읽기를 시작하세요.<br>
     더 많은 J-Pop을 후리가나와 원본 그리고 번역까지 함께 읽을 수 있습니다. 지금 확인해보세요.<br><br>
 </p>
-<div align="center"><img src="[[albumImageUrl]]" width="300" height="300"></div>
+<div align="center"><img  src="[[albumImageUrl]]"  alt="[[albumImageUrl]]" width="300" height="300"></div>
 <div align="center"><h1><a href="http://www.furiganahub.com/music/detail/[[id]]"></a>[[title]]</a></h1></div>
 <div align="center"><h2> [[artist]]</h2></div>
 <p>
@@ -19,7 +19,6 @@
 <p>
   [[lyricsKor]]
 </p>
-<div align="center"><a href="http://www.furiganahub.com/music/detail/[[id]]"></a><img src="[[albumImageUrl]]" width="300" height="300"/></a></div>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/[[youtubeId]]" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <br>
@@ -39,4 +38,7 @@
     좋아하는 일본 연예인 또는 친구의 트위터계정을 조회해보세요. 한자가 포함된 트윗을 후리가나로 보실 수 있습니다.<br><br>
 
     <a href="http://www.furiganahub.com">www.furiganahub.com</a>
+</p>
+<p align="left">
+  <span style="color:#bbb;font-size:11px;">이미지 출처: [[albumImageUrl]]</span>
 </p>
