--- a/bot/tstoryBot/blogtemplate.html
+++ b/bot/tstoryBot/blogtemplate.html
@@ -1,5 +1,7 @@
 <div align="center">
-  <a href="http://www.furiganahub.com"><img src="http://www.furiganahub.com/static/img/logoBlue.8db84c20.jpg" width="80" height="80"></a>
+  <a href="http://www.furiganahub.com/music/detail/[[id]]">
+    <img src="http://www.furiganahub.com/static/img/logoBlue.8db84c20.jpg" width="80" height="80">
+  </a><br>
   <a href="http://www.furiganahub.com/music/detail/[[id]]">www.furiganahub.com에서 보기</a>
 </div>
 
@@ -11,16 +13,22 @@
 <div align="center"><img  src="[[albumImageUrl]]"  alt="[[albumImageUrl]]" width="300" height="300"></div>
 <div align="center"><h1><a href="http://www.furiganahub.com/music/detail/[[id]]"></a>[[title]]</a></h1></div>
 <div align="center"><h2> [[artist]]</h2></div>
-<p>
+<div align="center">
+  <p style="width:60%;text-align: left">
   [[furigana]]
 </p>
+</div>
 <br>
 <br>
-<p>
-  [[lyricsKor]]
-</p>
+<div align="center">
+  <p style="width:60%;text-align: left">
+    [[lyricsKor]]
+  </p>
+</div>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/[[youtubeId]]" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<div align="center">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/[[youtubeId]]" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
 <br>
 
 <div align="center">
