--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,5 +33,12 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    	
+    <script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
+    <script type="text/javascript">
+    if(!wcs_add) var wcs_add = {};
+    wcs_add["wa"] = "be864530b1f4e8";
+    wcs_do();
+    </script>
   </body>
 </html>
