--- a/bot/tstoryBot/blogtemplate.html
+++ b/bot/tstoryBot/blogtemplate.html
@@ -21,7 +21,7 @@
   <a href="http://www.furiganahub.com/music/detail/[[id]]">www.furiganahub.com에서 보기</a>
 </div>
 
-<p align="center">
+<p align="left">
     80년도에서 최신 J-pop 7000여곡의 노래를 후리가나를 읽으면서 일본어를 배울 수있습니다.<br>
     후리가나, 원곡가사, 번역 그리고 관련 유튜브 동영상을 보면서 노래와 일본어 읽기를 시작하세요.<br>
     더 많은 J-Pop을 후리가나와 원본 그리고 번역까지 함께 읽을 수 있습니다. 지금 확인해보세요.<br><br>
