--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,9 +17,20 @@
     <meta name="twitter:description" content="80년도에서 최신 J-pop 7000여곡의 노래를 후리가나를 읽으면서 일본어를 배울 수있습니다. 후리가나, 원곡가사, 번역 그리고 관련 유튜브 동영상을 보면서 노래와 일본어 읽기를 시작하세요. 매일 1시간에 한번씩 업데이트 되는 일본의 4대 메인 뉴스인 일본 TV(NNN), 아사히(ANN), TBS(JNN), 후지 TV(FNN)의 기사를 후리가나와 함께 읽을 수 있습니다. JLPT모든 레벨(1 ~ 5)의 한자를 배울 수 있습니다. 그림과 획수 음독 훈독을 보면서 배워봅시다. 좋아하는 일본 연예인 또는 친구의 트위터계정을 조회해보세요. 한자가 포함된 트윗을 후리가나로 보실 수 있습니다.">
     <meta name="twitter:image" content="http://www.furiganahub.com/static/img/logoBlue.8db84c20.jpg">
     <meta name="twitter:creator" content="@_FURIGANA">
+    <meta name="google-site-verification" content="9viFX_6H-ntF_qnX5A5S180l8Rppy3anZ0AqpwdEO-k" />
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title></title>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128960444-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-128960444-1');
+    </script>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({
         google_ad_client: "ca-pub-4430047258494940",
