blog bot updated
Signed-off-by: Changbeom Ha <hatcha82@gmail.com>

--- a/bot/blogbot/newsBlogtemplate.html
+++ b/bot/blogbot/newsBlogtemplate.html
@@ -11,6 +11,7 @@
 <div align="left">
     <img src="[[newsPubllisherImageUrl]]" width="80" height="80">
   <h2><a href="http://www.furiganahub.com/article/detail/[[id]]"></a>[[titleFurigana]]</a></h2>
+  <div align="center"><img  src="#0"  alt="[[newsImageUrl]]" width="300" height="300"></div>
   <span style="color:#bbb;font-size:11px;">발행일 : [[newsPublishedDate]]</span>
 </div>
 <p>
